<resources>
    <string name="app_name">MyNote</string>
    <string name="open">open</string>
    <string name="close">close</string>


    <string name="phone_code">+91</string>
    <string name="OTPcode">Send OTP</string>
    <string name="email">Continue with Email </string>
    <string name="facebook">Facebook </string>
    <string name="google">Google </string>
    <string name="OR">OR</string>
    <string name="terms_policy">By continuing, you agree to \n Terms of service, privacy policy, content policy.</string>

    <string name="username">Full Name</string>
    <string name="emails">Email</string>
    <string name="comments">Please add any specific comments or suggestions \n that you may have</string>
    <string name="password">Password</string>
    <string name="forgetpsw">Forgot Password?</string>
    <string name="loginTitle">LOGIN WITH EMAIL</string>
    <string name="regisForm">REGISTRATION FORM</string>
    <string name="loginbtn">Login</string>
    <string name="registrationbtn">SIGN UP</string>

    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="resgisterNew">Register a New Account Here!</string>
    <string name="loginTermsCondition">By signing in your agree to Fooddelivers terms and Conditions and Privacy Policy</string>
    <string name="logindecs">Login to your account to manage customer or visiter feedbacks for your <deliversFood>                  </deliversFood></string>
    <string name="title_activity_bottom_navigations">MainActivity</string>

    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="pro_chnage">Change profile</string>
    <string name="pro_comunication">Communication</string>
    <string name="share">Share</string>
    <string name="login">Login</string>
    <string name="title_currentlocation">Current Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>