<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_loc"
        android:icon="@drawable/current_location"
        android:title="@string/title_currentlocation" />

    <item
        android:id="@+id/change_profile"
        android:title="@string/pro_chnage" >

        <menu>

            <item
                android:id="@+id/login"
                android:icon="@drawable/login_24"
                android:title="@string/login" />
        </menu>


    </item>



    <item
        android:id="@+id/comunication"
        android:title="@string/pro_comunication" >

        <menu>

            <item
                android:id="@+id/share"
                android:icon="@drawable/share_24"
                android:title="@string/login" />
            <item
                android:id="@+id/rate"
                android:icon="@drawable/share_24"
                android:title="Rate Us" />
        </menu>


    </item>

</menu>