<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:id="@+id/rlParent"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    tools:context=".LoginActivity.Login">

    <RelativeLayout
        android:id="@+id/secondLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/splash"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size20"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="@dimen/size20">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size50"
                android:background="@drawable/edit_text_border"
                android:drawableEnd="@drawable/icon_close"
                android:fontFamily="@font/avenir_medium"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="@dimen/size130"
                android:paddingEnd="@dimen/size16"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size18" />

            <ImageView
                android:id="@+id/img_ind"
                android:layout_width="@dimen/size60"
                android:layout_height="@dimen/size50"
                android:src="@drawable/india_flag" />

            <TextView
                android:id="@+id/txt_phone_code"
                android:layout_width="@dimen/size60"
                android:layout_height="@dimen/size40"
                android:layout_marginTop="@dimen/size4"
                android:layout_toEndOf="@+id/img_ind"
                android:drawableEnd="@drawable/dropdown"
                android:fontFamily="@font/avenir_medium"
                android:gravity="center"
                android:text="@string/phone_code"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size18" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rel_sent_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size20"
            android:layout_marginTop="@dimen/size20"
            android:layout_marginEnd="@dimen/size20"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_email"
                android:layout_width="@dimen/size50"
                android:layout_height="@dimen/size45"
                android:layout_marginTop="@dimen/size3"
                android:src="@drawable/email1" />


            <Button
                android:id="@+id/btn_sendOTP"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size50"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/avenir_medium"
                android:padding="@dimen/size2"
                android:text="@string/OTPcode"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size18"
                app:backgroundTint="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/size20"
            android:layout_marginTop="@dimen/size25"
            android:layout_marginEnd="@dimen/size20"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/size145"
                android:layout_height="@dimen/size1"
                android:layout_marginTop="@dimen/size8"
                android:background="@color/colorWhite" />

            <TextView
                android:layout_width="@dimen/size50"
                android:layout_height="@dimen/size16"
                android:layout_marginStart="@dimen/size4"
                android:fontFamily="@font/avenir_medium"
                android:gravity="center"
                android:text="@string/OR"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size1"
                android:layout_marginTop="@dimen/size8"
                android:background="@color/colorWhite"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_emaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/size20"
            android:layout_marginTop="@dimen/size25"
            android:layout_marginEnd="@dimen/size20"
            android:background="@drawable/edit_text_border"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_email1"
                android:layout_width="@dimen/size50"
                android:layout_height="@dimen/size45"
                android:layout_marginTop="@dimen/size3"
                android:src="@drawable/email1" />

            <Button
                android:id="@+id/btn_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size50"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/avenir_medium"
                android:paddingStart="@dimen/size10"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size16"
                app:backgroundTint="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/size20"
            android:layout_marginStart="@dimen/size20"
            android:layout_marginTop="@dimen/size16"
            android:layout_gravity="center">

            <RelativeLayout
                android:id="@+id/rel_facebook"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border">
                <ImageView
                    android:id="@+id/icon_facebook"
                    android:layout_width="@dimen/size50"
                    android:layout_height="@dimen/size45"
                    android:src="@drawable/facebook4"
                    android:layout_marginTop="@dimen/size3"/>
                <Button
                    android:id="@+id/btn_facebook"
                    android:layout_width="170dp"
                    android:layout_height="@dimen/size50"
                    android:background="@drawable/edit_text_border"
                    android:text="@string/facebook"
                    android:textColor="@color/colorBlack"
                    android:textAllCaps="false"
                    android:textSize="@dimen/size16"
                    android:paddingStart="@dimen/size10"
                    android:layout_toEndOf="@+id/icon_facebook"
                    android:drawableStart="@drawable/facebook4"
                    android:fontFamily="@font/avenir_medium"
                    app:backgroundTint="@color/colorWhite"/>


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rel_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:layout_marginStart="@dimen/size16">

                <ImageView
                    android:id="@+id/icon_gooogle"
                    android:layout_width="@dimen/size50"
                    android:layout_height="@dimen/size45"
                    android:src="@drawable/google4"
                    android:layout_marginTop="@dimen/size3"/>
                <Button
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size50"
                    android:background="@drawable/edit_text_border"
                    android:text="@string/google"
                    android:textColor="@color/colorBlack"
                    android:textAllCaps="false"
                    android:textSize="@dimen/size16"
                    android:paddingStart="@dimen/size10"
                    android:layout_toEndOf="@+id/icon_gooogle"
                    android:fontFamily="@font/avenir_medium"
                    app:backgroundTint="@color/colorWhite"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_term_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size40"
            android:layout_marginEnd="@dimen/size20"
            android:layout_marginStart="@dimen/size20"
            android:text="@string/terms_policy"
            android:textSize="@dimen/size12"
            android:fontFamily="@font/avenir_medium"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            />

    </LinearLayout>
</RelativeLayout>